--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.studynow"
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
@@ -12,16 +13,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyNow"
         tools:targetApi="31">
+
+        <!-- Register / Login - not exported to other apps -->
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+
+        <!-- Main activity (explicit exported=false for clarity) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <!-- Launcher (Splash) -->
         <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
