--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.studynow"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.studynow">
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyNow"
         tools:targetApi="31">
 
-        <!-- Register / Login - not exported to other apps -->
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-
-        <!-- Main activity (explicit exported=false for clarity) -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-
-        <!-- Launcher (Splash) -->
+        <!-- Launcher -->
         <activity
             android:name=".SplashActivity"
             android:exported="true">
@@ -38,6 +23,21 @@
             </intent-filter>
         </activity>
 
-    </application>
+        <!-- App Screens -->
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
 
+        <!-- Profile screen (accessed from MainActivity only) -->
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+
+    </application>
 </manifest>
